Prevent wrapping of dates in message lists

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1673,6 +1673,10 @@ header .search_form {
   vertical-align: middle;
 }
 
+.inbox-sent {
+  white-space: nowrap;
+}
+
 .inbox-mark-unread,
 .inbox-mark-read,
 .inbox-delete {
